WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
281074
REGRESSION(
284791@main
): [ Debug ] 2x TestWebKitAPI.JavaScriptCore.Incremental* (api-tests) are constant asserts
https://bugs.webkit.org/show_bug.cgi?id=281074
Summary
REGRESSION(284791@main): [ Debug ] 2x TestWebKitAPI.JavaScriptCore.Incrementa...
Dawn Morningstar
Reported
2024-10-08 11:40:22 PDT
TestWebKitAPI.JavaScriptCore.IncrementalSweeperMainThread TestWebKitAPI.JavaScriptCore.IncrementalSweeperSecondaryThread These tests are both constantly asserting on debug queues after
284791@main
https://commits.webkit.org/284791@main
HISTORY:
https://results.webkit.org/?suite=api-tests&suite=api-tests&test=TestWebKitAPI.JavaScriptCore.IncrementalSweeperMainThread&test=TestWebKitAPI.JavaScriptCore.IncrementalSweeperSecondaryThread
Test-run:
https://build.webkit.org/#/builders/1236/builds/41
STDIO:
https://build.webkit.org/#/builders/1236/builds/41/steps/19/logs/stdio
Assert: TestWebKitAPI.JavaScriptCore.IncrementalSweeperSecondaryThread ASSERTION FAILED: g_jscConfig.options.allowUnfinalizedAccess || g_jscConfig.options.isFinalized /Volumes/Data/worker/Apple-Sequoia-Debug-Build/build/Source/JavaScriptCore/runtime/Options.h(139) : static OptionsStorage::Bool &JSC::Options::enableStrongRefTracker() 1 0x114b35418 JSC::Options::enableStrongRefTracker() 2 0x114b35374 JSC::StrongRefTracker::enabled() 3 0x114b35340 WTF::RefTrackerMixin<JSC::StrongRefTracker>::RefTrackerMixin() 4 0x114b350a4 WTF::RefTrackerMixin<JSC::StrongRefTracker>::RefTrackerMixin() 5 0x114b3e428 JSC::Strong<JSC::JSObject, (JSC::ShouldStrongDestructorGrabLock)0>::Strong() 6 0x114b122a8 JSC::Strong<JSC::JSObject, (JSC::ShouldStrongDestructorGrabLock)0>::Strong() 7 0x114b12244 -[JSContext .cxx_construct] 8 0x189a3beb8 object_cxxConstructFromClass 9 0x189a35d70 +[NSObject new] 10 0x1012b000c TestWebKitAPI::JavaScriptCore_IncrementalSweeperSecondaryThread_Test::TestBody() 11 0x102155058 void testing::internal::HandleSehExceptionsInMethodIfSupported<testing::Test, void>(testing::Test*, void (testing::Test::*)(), char const*) 12 0x102107770 void testing::internal::HandleExceptionsInMethodIfSupported<testing::Test, void>(testing::Test*, void (testing::Test::*)(), char const*) 13 0x1021076c0 testing::Test::Run() 14 0x10210862c testing::TestInfo::Run() 15 0x102109828 testing::TestSuite::Run() 16 0x102117b58 testing::internal::UnitTestImpl::RunAllTests() 17 0x102159eec bool testing::internal::HandleSehExceptionsInMethodIfSupported<testing::internal::UnitTestImpl, bool>(testing::internal::UnitTestImpl*, bool (testing::internal::UnitTestImpl::*)(), char const*) 18 0x1021174f8 bool testing::internal::HandleExceptionsInMethodIfSupported<testing::internal::UnitTestImpl, bool>(testing::internal::UnitTestImpl*, bool (testing::internal::UnitTestImpl::*)(), char const*) 19 0x1021173e4 testing::UnitTest::Run() 20 0x1014d69ac RUN_ALL_TESTS() 21 0x1014d6940 TestWebKitAPI::TestsController::run(int, char**) 22 0x1020ef5f8 main 23 0x189a80274 start
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-10-08 11:42:04 PDT
<
rdar://problem/137526107
>
Justin Michaud
Comment 2
2024-10-08 13:43:39 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/34861
Dawn Morningstar
Comment 3
2024-10-09 14:24:53 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/34928
EWS
Comment 4
2024-10-09 14:27:04 PDT
Test gardening commit
284925@main
(435e639fed0d): <
https://commits.webkit.org/284925@main
> Reviewed commits have been landed. Closing PR #34928 and removing active labels.
Mark Lam
Comment 5
2024-10-15 11:36:32 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/35230
Yusuke Suzuki
Comment 6
2024-11-10 10:29:39 PST
Pull request:
https://github.com/WebKit/WebKit/pull/36462
EWS
Comment 7
2024-11-10 13:27:17 PST
Committed
286414@main
(74fba0c2cf75): <
https://commits.webkit.org/286414@main
> Reviewed commits have been landed. Closing PR #36462 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug