Tools/TestWebKitAPI/Tests/JavaScriptCore/JSRunLoopTimer.mm
@@ -1,5 +1,5 @@
 /*
- * Copyright (C) 2014 Apple Inc. All rights reserved.
+ * Copyright (C) 2014-2024 Apple Inc. All rights reserved.
  *
  * Redistribution and use in source and binary forms, with or without
  * modification, are permitted provided that the following conditions
@@ -26,6 +26,7 @@
 #import "config.h"
 
 #import "Test.h"
+#import <JavaScriptCore/InitializeThreading.h>
 #import <JavaScriptCore/JavaScriptCore.h>
 #import <wtf/RetainPtr.h>
 #import <wtf/RunLoop.h>
@@ -34,6 +35,8 @@
 #import <wtf/cocoa/NSURLExtras.h>
 #import <wtf/cocoa/VectorCocoa.h>
 #import <wtf/text/WTFString.h>
+
+extern "C" void JSAsynchronousGarbageCollectForDebugging(JSContextRef);
 
 // JavaScriptCore's behavior at the time of writing is that destructors
 // run asynchronously on the thread that allocated the VM, unless they run
@@ -66,7 +69,7 @@ static void triggerGC(JSContext *context)
     @autoreleasepool {
         for (size_t i = 0; i < 1000; ++i)
             [JSValue valueWithObject:adoptNS([TestObject new]).get() inContext:context];
-        JSGarbageCollect([context JSGlobalContextRef]);
+        JSAsynchronousGarbageCollectForDebugging([context JSGlobalContextRef]);
     }
 }
 
@@ -79,13 +82,11 @@ static void cycleRunLoop()
     }
 }
 
-// rdar://137526107 REGRESSION(284791@main): [ Debug ] 2x TestWebKitAPI.JavaScriptCore.Incremental* (api-tests) are constant asserts
-#if !defined(NDEBUG)
-TEST(JavaScriptCore, DISABLED_IncrementalSweeperMainThread)
-#else
 TEST(JavaScriptCore, IncrementalSweeperMainThread)
-#endif
 {
+    WTF::initializeMainThread();
+    JSC::initialize();
+
     auto context = adoptNS([JSContext new]);
     s_expectedRunLoop = &RunLoop::current();
 
@@ -95,13 +96,11 @@ TEST(JavaScriptCore, IncrementalSweeperMainThread)
     }
 }
 
-// rdar://137526107 REGRESSION(284791@main): [ Debug ] 2x TestWebKitAPI.JavaScriptCore.Incremental* (api-tests) are constant asserts
-#if !defined(NDEBUG)
-TEST(JavaScriptCore, DISABLED_IncrementalSweeperSecondaryThread)
-#else
 TEST(JavaScriptCore, IncrementalSweeperSecondaryThread)
-#endif
 {
+    WTF::initializeMainThread();
+    JSC::initialize();
+
     auto context = adoptNS([JSContext new]);
     s_expectedRunLoop = &RunLoop::current();
 
